--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "prova2": {
+    "easyhomefrontend": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/prova2",
+            "outputPath": "dist/easyhomefrontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -70,10 +70,10 @@
           },
           "configurations": {
             "production": {
-              "buildTarget": "prova2:build:production"
+              "buildTarget": "easyhomefrontend:build:production"
             },
             "development": {
-              "buildTarget": "prova2:build:development"
+              "buildTarget": "easyhomefrontend:build:development"
             }
           },
           "defaultConfiguration": "development"
